fix: playerbox polish on mobile

--- a/mods/chess/web/css/chess-base.css
+++ b/mods/chess/web/css/chess-base.css
@@ -266,9 +266,7 @@ img.captured {
      }
 
     .turn-shape {
-        width: 40px;
-        height: 40px;
-        margin: 5px;
+        margin: 0px;
     }
 
 
