--- a/mods/chess/web/css/chess-playerbox.css
+++ b/mods/chess/web/css/chess-playerbox.css
@@ -3,7 +3,6 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  height: calc(90%);
 }
 
 .game-playerbox {
