--- a/web/saito/css-imports/game-playerbox.css
+++ b/web/saito/css-imports/game-playerbox.css
@@ -70,46 +70,54 @@
 /*** Poker / Cardgame Boxes ***/
 /******************************/
 .game-playerbox-seat-8 {
+  position: absolute;
   bottom: 1vh;
   left: 1em;
 } 
 
 .game-playerbox-seat-7 {
+  position: absolute;
   bottom: 1vh;
   right: 1em;
 }
 
 .game-playerbox-seat-6 {
+  position: absolute;
   left: 1em;
   top: 45vh;
   transform: translateY(-50%);
 }
   
 .game-playerbox-seat-5 {
+  position: absolute;
   left: 1em;
   top: 20vh;
   transform: translateY(-50%);
 }
 
 .game-playerbox-seat-4 {
+  position: absolute;
   left: 50vw;
   top: 30px;
   transform: translateX(-50%);
 }
 
 .game-playerbox-seat-3 {
+  position: absolute;
   right: 1em;
   top: 20vh;
   transform: translateY(-50%);
 }
 
 .game-playerbox-seat-2 {
+  position: absolute;
   right: 1em;
   top: 45vh;
   transform: translateY(-50%);
 }
 
 .game-playerbox-seat-1 {
+  position: absolute;
   min-width: 30vh;
   max-height: 32vh;
   left: 50vw;
@@ -119,26 +127,19 @@
   margin-bottom: 2rem;
 }
 
-.game-playerbox-seat-1 , .game-playerbox-seat-2 , .game-playerbox-seat-3 , .game-playerbox-seat-4 , .game-playerbox-seat-5 , .game-playerbox-seat-6 , .game-playerbox-seat-7 , .game-playerbox-seat-8 {
-  position: absolute;
-}
-
-
-
-
 
 @media screen and (orientation: portrait) and (max-width: 600px) {
 
   .game-playerbox-manager {
-    display: none;
-    top: 0px;
-    left: 0px;
-    padding: 2rem;
-    padding-top: 10rem;
-    width: 100%;
-    height: 100%;
-    background-color: #000;
-    z-index: 9;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: max-content;
+    justify-content: space-between;
+    bottom: 1px;
+    top: unset;
+    margin-bottom: 1px;
+    position: absolute;
+    height: max-content;
   }
 
   .game-playerbox {
